@@ -55,6 +55,8 @@ Non-Consecutive
 Numbered Room
 Outside Clues
 Palindrome Lines
+Parindrome Lines - see Palindrome Lines
+Parity Dots
 Parity Lines (alternating parity along line)
 Pointing Arrows - see Arrows
 Position Sums
@@ -543,6 +545,31 @@ Palindrome Lines
 ----------------
 setPalindromeLine(list): creates a palindrome line constraint
   list: a list of cell specifications
+  
+setParindromeLine(list): creates a parindrome line constraint, where only parity has to match 
+  list: a list of cell specifications
+  
+Parity Dots
+-----------
+Parity dots are placed like Kropki dots, but white dots indicate the adjacent cells are of different parities, while black dots indicate the adjacent cells are of the same parity.
+
+setParityDotWhite(cellHV): creates a white parity dot
+  cellHV: an extended cell specification which adds the hv parameter: dot is on the right side if H, or on the bottom if V. All parameters can be given in a tuple, and these can use the Horz and Vert variables for the HV specification. Shorthand is possible, appending 0 to a cell spec to indicate horizontal and 1 to indicate vertical.
+  Example: 251, '251' and (2,5,p.Vert) all specify a dot on the bottom edge of cell 2,5
+  
+setParityDotBlack(cellHV): creates a black parity dot
+  cellHV: an extended cell specification which adds the hv parameter: dot is on the right side if H, or on the bottom if V. All parameters can be given in a tuple, but shorthand is possible, appending 0 to a cell spec to indicate horizontal and 1 to indicate vertical.
+  Example: 251, '251' and (2,5,p.Vert) all specify a dot on the bottom edge of cell 2,5
+  
+setParityDotWhiteArray(list): creates multiple white parity dots
+  list: list of cellHV specifications, see setParityDotWhite
+
+setParityDotBlackArray(list): creates multiple black parity dots
+  list: list of cellHV specifications, see setParityDotBlack
+  
+setParityDotArray(list): creates multiple parity dots
+  list: list of cellHVWB specifications, which include a cell spec, the HV spec as given in setParityDotWhite, and a WB spec, specifying the color of the dot. When given as a tuple, the White and Black variables can be used to specify W/B. Shorthand is possible, with white being 0 and black 1.
+  Example: 1701 incidates a black dot (1 WB spec is fourth) on the right edge (0 HV spec is third) of cell 1,7 (17 cell spec is first). This can also be written as the tuple (1,7,p.Horz,p.Black)
   
 Parity Lines
 ------------
